finalized adding collection

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@payloadcms/db-vercel-postgres": "3.39.1",
     "@payloadcms/next": "3.39.1",
     "@payloadcms/payload-cloud": "3.39.1",
+    "@payloadcms/plugin-seo": "^3.39.1",
     "@payloadcms/richtext-lexical": "3.39.1",
     "@payloadcms/storage-vercel-blob": "3.39.1",
     "@payloadcms/ui": "3.39.1",
