--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.3.0",
+    "node-fetch": "^3.3.2",
     "payload": "3.39.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^22.5.4",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
     "eslint": "^9.16.0",
